[package]
name = "astre"
version = "0.1.2"
edition = "2024"
description = "A modular game framework for optimised 2d games"
license = "Apache-2.0"
repository = "https://github.com/Jpegz0/astre"
keywords = ["game", "engine", "2d", "bevy", "tilemap"]
categories = ["game-engines", "game-development", "graphics", "rendering"]

[lib]
name = "astre"
path = "src/lib.rs"

[dependencies]
bevy = "0.16"